--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-flask-cors
-PyPDF2
-python-docx
-openai
+Flask==2.3.3
+flask-cors==4.0.0
+PyPDF2==3.0.1
+python-docx==0.8.11
+openai==1.3.8
 
